[package]
name = "parallel"
version = "0.1.0"
authors = ["Cyrill Burgener <cyrill.burgener@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
structopt = "0.2.16"

serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

log = { version = "0.4.6", features = ["std"] }
env_logger = "0.6.1"

libc = "0.2.58"
num_cpus = "1.10.1"
