[package]
name = "async-cmd"
version = "0.1.1"
authors = ["Cyrill Burgener <cyrill.burgener@gmail.com>"]
edition = "2018"
description = "A tool to run shell commands in parallel."

repository = "https://github.com/ctbur/async/"
readme = "README.md"
keywords = ["parallel", "shell"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"


[[bin]]
name = "async"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
structopt = "0.2.16"

serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.1.4"

log = { version = "0.4.6", features = ["std"] }
env_logger = "0.6.1"

libc = "0.2.58"
num_cpus = "1.10.1"
threadpool = "1.7.1"
